# Incremental_Computation_CISC499

./: .gitattributes  Cargo.toml  README.md
bench_results/criterion/incremental calc/base/: estimates.json  raw.csv  sample.json
bench_results/criterion/incremental calc/new/: benchmark.json  tukey.json
bench_results/criterion/incremental calc/report/: index.html
bench_results/criterion/initial calculation/base/: benchmark.json  raw.csv  sample.json  tukey.json
bench_results/criterion/initial calculation/new/: estimates.json
bench_results/criterion/initial calculation/report/: index.html
bench_results/criterion/modified from scratch/base/: raw.csv
bench_results/criterion/modified from scratch/new/: benchmark.json  estimates.json  sample.json  tukey.json
bench_results/criterion/modified from scratch/report/: index.html
bench_results/criterion/non_nested_compare/10/report/: index.html
bench_results/criterion/non_nested_compare/11/report/: index.html
bench_results/criterion/non_nested_compare/12/report/: index.html
bench_results/criterion/non_nested_compare/13/report/: index.html
bench_results/criterion/non_nested_compare/14/report/: index.html
bench_results/criterion/non_nested_compare/15/report/: index.html
bench_results/criterion/non_nested_compare/report/: index.html
bench_results/criterion/report/: index.html
benches/: list_change.rs  tree_change.rs
examples/: make_tree.rs  tree_test.rs
src/: choice.rs  error.rs  lib.rs  list.rs  node.rs  operations.rs  rbtree.rs
tests/: test.rs
(+304 files in other folders)
