[package]
name = "incremental_tree"
version = "0.1.0"
authors = ["Quinn Pollock <contact@quinnpollock.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rbtree = "0.1.5"
criterion-cycles-per-byte = "0.1.1"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "list_change"
harness = false

# [[bench]]
# name = "tree_change"
# harness = false
